[package]
name = "elf2psx"
authors = ["Joshua Barrett <jjbarr.public@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Converts ELF binaries into PSX EXE files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.7"
anyhow = "1"
byteorder = "1"
parse_int = "0.6"
clap = { version = "4.4.6", features = ["derive"] }
